--- a/_posts/2019-01-23-MySQL-索引详解.md
+++ b/_posts/2019-01-23-MySQL-索引详解.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   			                  # 使用的布局（不需要改）
-title:      MySQL-索引实现                 # 标题 
-subtitle:   深度挖掘MySQL索引设计           #副标题
+title:      MySQL-索引详解                 # 标题 
+subtitle:   深度挖掘MySQL索引设计与实现           #副标题
 date:       2019-01-22 				           # 时间
 author:     Lih 						             # 作者
 header-img: img/post-bg-2015.jpg 	       #这篇文章标题背景图片
