--- a/_posts/2019-01-23-MySQL-索引详解.md
+++ b/_posts/2019-01-23-MySQL-索引详解.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   			                  # 使用的布局（不需要改）
-title:      MySQL-索引详解                 # 标题 
-subtitle:   深度挖掘MySQL索引设计与实现           #副标题
+title:      MySQL-索引及存储引擎                 # 标题 
+subtitle:   探索MySQL索引的设计及原理           #副标题
 date:       2019-01-22 				           # 时间
 author:     Lih 						             # 作者
 header-img: img/post-bg-2015.jpg 	       #这篇文章标题背景图片
@@ -33,7 +33,7 @@ Hash索引：Hash表
 
 主键、唯一、普通、复合
 
-## 索引实现原理分析
+### 索引实现原理分析
 
 ### B+树索引：
 
@@ -67,11 +67,11 @@ B树——数据在页内，一次IO得到的索引少，IO多，叶子结点互
 
 B+树：1、深度低，IO次数少
 
-2、叶子结点间有指针，范围查询快
+​	     2、叶子结点间有指针，范围查询快
 
-3、普通结点不包含数据，数据只存在叶子结点中
+​	    3、普通结点不包含数据，数据只存在叶子结点中
 
-​            3、每个结点设计大小为一个磁盘数据页，IO次数少。
+​            4、每个结点设计大小为一个磁盘数据页，IO次数少。
 
 ### 重点：为什么每个结点设计为一个磁盘数据页大小？
 
@@ -89,9 +89,9 @@ B+树：1、深度低，IO次数少
 
 缺点：1、占据空间大（索引树也需要空间）
 
-​           2、更新慢（需要维护索引树）
+​            2、更新慢（需要维护索引树）
 
-​           3、索引创建、销毁需要时间
+​            3、索引创建、销毁需要时间
 
 ## 索引的注意事项
 
@@ -137,21 +137,21 @@ D-持久性：事务提交后对数据库的影响是永久的。
 
 存储引擎决定一整套的数据库系统：包括存储机制、索引结构、加锁水平、事务执行情况等。
 
-### InnoDB：事务、行锁、外键、全文索引
+## InnoDB：事务、行锁、外键、全文索引
 
 特点：并发性能高（行锁，锁粒度小）
 
 ​           支持事务
 
-### MyISAM：表锁、无外键、无事务、
+## MyISAM：表锁、无外键、无事务、
 
 特点：读取更快（索引和数据分开，一次可以读取更多索引）
 
 ​           不支持事务、 
 
-#### InnoDB与MyISAM索引实现：
+## InnoDB与MyISAM索引实现：
 
-### InnoDB：
+### InnoDB 索引实现：
 
 聚簇索引：普通结点保存索引关键字，叶子结点保存记录数据
 
@@ -161,7 +161,7 @@ D-持久性：事务提交后对数据库的影响是永久的。
 
 ![image-20190128152103152](/img/image-20190128152103152.png)
 
-#### MyISAM索引实现：天然非聚簇索引
+### MyISAM 索引实现：天然非聚簇索引
 
 索引结构：B+树保存索引，叶子结点保存数据在磁盘中的地址
 
