Update and rename 2019-01-23-问题：内部类的常量.md to 2019-01-28-问题：内部类及其常量.md

--- a/_posts/2019-01-28-问题：内部类及其常量.md
+++ b/_posts/2019-01-28-问题：内部类及其常量.md
@@ -76,7 +76,8 @@ class outter{
 
 ## 问题3：非static内部类是否真的不能包含static属性
 
-查询非static内部类的资料时发现，其内部是可以包含静态常量的，原因是Java常量是存在于常量池之中的，常量池有两种，一种是class文件常量池，位于方法区中，另一种是运行时常量池，位于堆中。当访问类的编译时常量时并不会加载类。
+查询非static内部类的资料时发现，其内部居然可以包含静态常量的，此处又与问题二的结论产生矛盾。
+继续分析问题，Java常量是存在于常量池之中的，常量池有两种，一种是class文件常量池，位于方法区中，另一种是运行时常量池，位于堆中，当访问类的编译时常量时并不会加载类。
 
 ```java
 class test {
@@ -94,9 +95,9 @@ public class script {
 //str
 ```
 
-原因：这段结果表明访问类的编译时常量不会引起类的加载，因为访问常量时不能修改其内容，只是读取了常量池的值。
+这段结果表明访问类的编译时常量不会引起类的加载，因为访问常量时不能修改其内容，只是读取了常量池的值。
 
-编译时常量包括基本类型和常量，而其他常量会引起类的加载。例如：
+编译时常量包括基本类型，而运行时常量的初始化会引起类的加载。例如：
 
 ```Java
 class test {
