--- a/_posts/2019-01-23-MySQL-索引详解.md
+++ b/_posts/2019-01-23-MySQL-索引详解.md
@@ -4,7 +4,7 @@ title:      MySQL-索引及存储引擎                 # 标题
 subtitle:   探索MySQL索引的设计及原理           #副标题
 date:       2019-01-22 				           # 时间
 author:     Lih 						             # 作者
-header-img: img/post-bg-2015.jpg 	       #这篇文章标题背景图片
+header-img: img/view01.jpg 	       #这篇文章标题背景图片
 catalog: true 						               # 是否归档
 tags:								                     #标签
     - MySQL
