--- a/_posts/2019-02-7-设计模式 生产者与消费者.md
+++ b/_posts/2019-02-7-设计模式 生产者与消费者.md
@@ -4,7 +4,7 @@ title:      设计模式 生产者与消费者				   # 标题
 subtitle:   Java实现生产者与消费者		          #副标题
 date:       2019-02-7 				      # 时间
 author:     Lih 						  # 作者
-header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
+header-img: img/city02.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - JVM
@@ -181,14 +181,14 @@ public class ProducerAndConsumer {
 
 ### wait()/notify()实现方式的测试结果
 
-![1549790797739](F:\github.io\CoerLi.github.io\_posts\1549790797739.png)
+![1549790797739](/img/1549790797739.png)
 
 ### Condition实现方式的测试结果
 
-![1549790887788](F:\github.io\CoerLi.github.io\_posts\1549790887788.png)
+![1549790887788](/img/1549790887788.png)
 
 ### BlockingQueue实现方式的测试结果
 
-![1549790962662](F:\github.io\CoerLi.github.io\_posts\1549790962662.png)
+![1549790962662](/img/1549790962662.png)
 
 观察三次结果可以发现BlockingQueue实现方式打印的结果出现问题，思考之后发现是阻塞队列只保证了队列内部的同步，对于打印语句并未加锁。
