--- a/_posts/2019-01-22-HashMap源码分析.md
+++ b/_posts/2019-01-22-HashMap源码分析.md
@@ -4,7 +4,7 @@ title:      HashMap源码分析				   # 标题
 subtitle:   快速理解HashMap设计原理          #副标题
 date:       2019-01-22 				      # 时间
 author:     Lih 						  # 作者
-header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
+header-img: img/view05.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - Java集合
