--- a/_posts/2019-01-28-问题：内部类及其常量.md
+++ b/_posts/2019-01-28-问题：内部类及其常量.md
@@ -4,7 +4,7 @@ title:      问题：内部类及其常量				   # 标题
 subtitle:   探究Java内部类		          #副标题
 date:       2019-01-28 				      # 时间
 author:     Lih 						  # 作者
-header-img: img/post-bg-2015.jpg 	#这篇文章标题背景图片
+header-img: img/city01.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - JVM
