--- a/_posts/2019-01-28-问题 内部类及其常量.md
+++ b/_posts/2019-01-28-问题 内部类及其常量.md
@@ -1,6 +1,6 @@
 ---
 layout:     post   				          # 使用的布局（不需要改）
-title:      问题：内部类及其常量				   # 标题 
+title:      问题 内部类及其常量				   # 标题 
 subtitle:   探究Java内部类		          #副标题
 date:       2019-01-28 				      # 时间
 author:     Lih 						  # 作者
