update posts Java泛型 HashMap源码分析

--- a/_posts/2019-01-22-JVM 内存分区.md
+++ b/_posts/2019-01-22-JVM 内存分区.md
@@ -1,14 +1,13 @@
 ---
 layout:     post   			                  # 使用的布局（不需要改）
-title:      JVM-垃圾回收                 # 标题 
-subtitle:   学习JVM垃圾回收算法及收集器           #副标题
-date:       2019-01-22 				           # 时间
+title:      JVM 内存分区                 # 标题 
+subtitle:   学习JVM内存分区情况           #副标题
+date:       2019-01-18 				           # 时间
 author:     Lih 						             # 作者
-header-img: img/view03.jpg 	       #这篇文章标题背景图片
+header-img: img/view04.jpg 	       #这篇文章标题背景图片
 catalog: true 						               # 是否归档
 tags:								                     #标签
     - JVM
-    - GC算法
 ---
 
 ##  
