--- a/_posts/2019-01-28-问题：内部类及其常量.md
+++ b/_posts/2019-01-28-问题：内部类及其常量.md
@@ -1,14 +1,16 @@
+---
 layout:     post   				          # 使用的布局（不需要改）
-title:      问题 内部类及其常量				   # 标题 
+title:      问题：内部类及其常量				   # 标题 
 subtitle:   探究Java内部类		          #副标题
 date:       2019-01-28 				      # 时间
 author:     Lih 						  # 作者
 header-img: img/city01.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
-
     - JVM
     - 问题总结
+
+---
 
 [TOC]
 
@@ -97,7 +99,7 @@ public class script {
 
 编译时常量包括基本类型，而运行时常量的初始化会引起类的加载。例如：
 
-```java
+```Java
 class test {
     public static final String str = new String("str");
     static {
