--- a/_posts/2019-02-7-设计模式：生产者与消费者.md
+++ b/_posts/2019-02-7-设计模式：生产者与消费者.md
@@ -1,6 +1,6 @@
 ---
 layout:     post   				          # 使用的布局（不需要改）
-title:      设计模式 生产者与消费者				   # 标题 
+title:      设计模式：生产者与消费者				   # 标题 
 subtitle:   Java实现生产者与消费者		          #副标题
 date:       2019-02-7 				      # 时间
 author:     Lih 						  # 作者
@@ -25,7 +25,7 @@ tags:								#标签
 
 ## wait()/notify()实现
 
-```java
+```Java
 class MyRepository_1 implements MyRepository {
     //使用队列作为存储结构
     private Queue<Object> repository = new LinkedList<Object>();
@@ -78,7 +78,7 @@ class MyRepository_1 implements MyRepository {
 
 ## Condition()实现
 
-```java
+```Java
 class MyRepository_2 implements MyRepository{
     private Queue<Object> repository = new LinkedList<>();
     private final int size = 10;
@@ -126,7 +126,7 @@ class MyRepository_2 implements MyRepository{
 
 ## BlockingQueue实现
 
-```java
+```Java
 // 此方法有一个问题，输出的日志中观察，线程并不同步，原因是阻塞队列只保证了内部的同步，输出日志的语句并未被阻塞队列同步
 class MyRepository_3 implements MyRepository {
     private final int size = 10;
@@ -158,7 +158,7 @@ class MyRepository_3 implements MyRepository {
 
 ## 测试
 
-```java
+```Java
 public class ProducerAndConsumer {
     public static void main(String[] args) {
         ProducerAndConsumer producerAndConsumer = new ProducerAndConsumer();
