--- a/_posts/2019-02-20-Java并发：线程池.md
+++ b/_posts/2019-02-20-Java并发：线程池.md
@@ -56,6 +56,12 @@ public ThreadPoolExecutor(	int corePoolSize,
 | newSingleThreadExecutor | 单线程线程池，只有一个线程工作               |
 | newScheduledThreadPool  | 定长线程池，可以指定执行时间                 |
 
+newScheduledThreadPool 返回一个 ScheduledThreadPollExecutor类型的对象，包含四个方法
 
+```java
+// 接受一个callable对象，延迟一定时间后执行
+public ScheduledFuture<V> schedule(Callable<V> callable,long delay,TimeUnit unit)
+// 接受一个callable对象，延迟一定时间后执行
+public <V> ScheduledFuture<V> schedule(Callable<V> callable,long delay,TimeUnit unit)
+```
 
-# 
