--- a/_posts/2019-01-23-MySQL-索引及存储引擎.md
+++ b/_posts/2019-01-23-MySQL-索引及存储引擎.md
@@ -1,6 +1,6 @@
 ---
 layout:     post   			                  # 使用的布局（不需要改）
-title:      MySQL 索引及存储引擎                 # 标题 
+title:      MySQL：索引及存储引擎                 # 标题 
 subtitle:   探索MySQL索引的设计及原理           #副标题
 date:       2019-01-23 				           # 时间
 author:     Lih 						             # 作者
@@ -9,6 +9,7 @@ catalog: true 						               # 是否归档
 tags:								                     #标签
     - MySQL
     - 数据库
+
 ---
 
 [TOC]
@@ -185,4 +186,5 @@ D-持久性：事务提交后对数据库的影响是永久的。
  	备注：必须先满足第二范式;
 
 备注：往往在设计表中不能遵守第三范式，因为合理的冗余字段可以减少join的查询;
-      例如：成绩表包含学生表的id，但是同时也包含学生的姓名，可以减少查询次数。
+​      例如：成绩表包含学生表的id，但是同时也包含学生的姓名，可以减少查询次数。
+
