--- a/_posts/2019-02-15-Git：底层原理与基本使用.md
+++ b/_posts/2019-02-15-Git：底层原理与基本使用.md
@@ -1,3 +1,16 @@
+---
+layout:     post   				          # 使用的布局（不需要改）
+title:      Git：底层原理与基本使用				   # 标题 
+subtitle:   Git初步学习总结	          			#副标题
+date:       2019-02-15 				      		# 时间
+author:     Lih 						  # 作者
+header-img: img/view01.jpg 				#这篇文章标题背景图片
+catalog: true 							# 是否归档
+tags:								#标签
+    - 项目工具
+    - Git
+---
+
 [TOC]
 
 
@@ -121,16 +134,6 @@ git push origin v1.0   推送tag到远程仓库
 
 命令git push origin :refs/tags/<tagname>可以删除一个远程标签
 ```
-
-李航:https://mp.weixin.qq.com/s?__biz=MzU4NDQ4MzU5OA==&mid=2247483985&idx=1&sn=38531c2cee7b87f125df7aef41637014&chksm=fd985430caefdd26b0506aa84fc26251877eccba24fac73169a4d6bd1eb5e3fbdf3c3b940261#rd
-李航:https://blog.csdn.net/HeatDeath/column/info/18669
-李航:https://blog.csdn.net/HeatDeath
-李航:https://www.jianshu.com/p/3fc3646fad80
-李航:https://blog.csdn.net/tennysonsky/article/details/44562435
-李航:https://blog.csdn.net/leo777/article/details/1780299
-李航:https://www.cnblogs.com/xrq730/p/5260294.html
-
-https://www.nowcoder.com/discuss/70976
 
 ### 合作流程
 
