--- a/_posts/2019-02-21-架构入门：WEB三层架构与MVC.md
+++ b/_posts/2019-02-21-架构入门：WEB三层架构与MVC.md
@@ -1,14 +1,13 @@
 ---
 layout:     post   				        	# 使用的布局
-title:      架构入门：WEB三层架构与MVC				  	# 标题 
+title:      架构入门：WEB三层架构、MVC、				  	# 标题 
 subtitle:   架构入门         			# 副标题
 date:       2019-02-27 				      		# 时间
 author:     Lih 						# 作者
 header-img: img/office03.jpg 					# 这篇文章标题背景图片
 catalog: true 							# 是否归档
 tags:								# 标签
-    - Java
-    - JVM
+    - 杂项
 
 
 
