--- a/_posts/2019-02-21-Java：继承的实现原理.md
+++ b/_posts/2019-02-21-Java：继承的实现原理.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   				        	# 使用的布局
-title:      Java：继承的实现原理				  	# 标题 
-subtitle:   深挖Java 继承的实现原理          			#副标题
+title:      Java：继承的实现原理（未完成）			# 标题 
+subtitle:   分析Java继承的实现原理          			#副标题
 date:       2019-02-21 				      		# 时间
 author:     Lih 						# 作者
 header-img: img/office03.jpg 					#这篇文章标题背景图片
