--- a/_posts/2019-01-22-HashMap源码分析.md
+++ b/_posts/2019-01-22-HashMap源码分析.md
@@ -1,7 +1,7 @@
 ---
 layout:     post   				          # 使用的布局（不需要改）
 title:      HashMap源码分析				   # 标题 
-subtitle:   快速理解HashMap设计原理          #副标题
+subtitle:   探究HashMap设计原理          #副标题
 date:       2019-01-22 				      # 时间
 author:     Lih 						  # 作者
 header-img: img/view05.jpg 	#这篇文章标题背景图片
