--- a/_posts/2019-02-22-HashMap源码分析.md
+++ b/_posts/2019-02-22-HashMap源码分析.md
@@ -41,20 +41,128 @@ static final int hash(Object key) {
 }
 ```
 
-为何要通过hash()方法获得一个新的hashCode？
+**为何要通过hash()方法获得一个新的hashCode？**
 
-​	原因：增加低位的离散程度，减少hash冲突	
+原因：增加低位的离散程度，减少hash冲突	
 
-​	HashMap取得桶位置的方法是：
+HashMap取得桶位置的方法是：
 
 ```java
 //jdk1.8 中的HashMap没有专门的取索引方法，以下是伪代码
 key.hash() & (table.length - 1)
 ```
 
-​	由于数组length一般较短，当length和hashCode相与时只能利用到低位，那么高位无法影响散列的结果。但是通过hash()方法，高位与低位相与，增加低位离散程度的同时，保留了高位对散列结果的影响。
+由于数组length一般较短，当length和hashCode相与时只能利用到低位，那么高位无法影响散列的结果。但是通过hash()方法，高位与低位相与，增加低位离散程度的同时，保留了高位对散列结果的影响。
 
-**——————————————————————————————————————————————**
+扩容时机：先插入数据，插入后检查是否达到阈值
+
+扩容的原因：桶个数不变，存放的数据越多，越可能hash冲突。Hash冲突导致桶内形成链表/红黑树，而链表的查询时间复杂度为n，影响效率。
+
+存储细节：key为null，直接存放到[0]处。否则，取key的hashcode，和桶的长度取模，再找到对应的桶，桶内无数据则直接存放，有数据则判断key是否相等（equals），是则替换，不是（即：hashcode相同，key不同）则插入到链表的最后。
+
+链表的长度>8时变成红黑树，原因是提高查询效率。
+
+（-1是第一个，>=7时，共有9个）
+
+​                                                  
+
+逆树化：当resize时分裂树，当分裂后的树<6，则
+
+
+
+
+
+### resize()方法分析：
+
+**当resize时，链表会被拆分。**
+
+拆分原则，由于length每次都会2倍增长，通过一个if((e.hash & newCap) == 0)将链表拆分为两个长度基本相同的链表（因为每个key的hashcode在第N位的值取0/1的概率相同，所以理论上可以均分），拆分后，相与结果为0的链表的桶位置还是原地（因为hash与newCap相与结果为0，说明高位bit位对相与结果不产生影响，即说明 (hashCode&newLength-1)和之前的结果一样，即仍然在桶原来的位置上）。相与结果不为0的链表，向前移动oldCap位（因为length-1产生的高位bit位的结果对(hashCode&newLength-1)的结果产生了影响，影响的范围就是原结果+newCap/2，即原桶位置+oldCap）。
+
+```java
+final Node<K,V>[] resize() {
+        Node<K,V>[] oldTab = table;
+        int oldCap = (oldTab == null) ? 0 : oldTab.length;
+        int oldThr = threshold;
+        int newCap, newThr = 0;
+        if (oldCap > 0) {
+            if (oldCap >= MAXIMUM_CAPACITY) {
+                threshold = Integer.MAX_VALUE;
+                return oldTab;
+            }
+            else if ((newCap = oldCap << 1) < MAXIMUM_CAPACITY &&
+                     oldCap >= DEFAULT_INITIAL_CAPACITY)
+                newThr = oldThr << 1; // double threshold
+        }
+        else if (oldThr > 0) 
+            newCap = oldThr;
+        else {
+            newCap = DEFAULT_INITIAL_CAPACITY;
+            newThr = (int)(DEFAULT_LOAD_FACTOR * DEFAULT_INITIAL_CAPACITY);
+        }
+        if (newThr == 0) {
+            float ft = (float)newCap * loadFactor;
+            newThr = (newCap < MAXIMUM_CAPACITY && ft < (float)MAXIMUM_CAPACITY ?
+                      (int)ft : Integer.MAX_VALUE);
+        }
+        threshold = newThr;
+        @SuppressWarnings({"rawtypes","unchecked"})
+            Node<K,V>[] newTab = (Node<K,V>[])new Node[newCap];
+        table = newTab;
+        if (oldTab != null) {
+            for (int j = 0; j < oldCap; ++j) {
+                Node<K,V> e;
+                if ((e = oldTab[j]) != null) {
+                    oldTab[j] = null;
+                    if (e.next == null)
+                        newTab[e.hash & (newCap - 1)] = e;
+                    else if (e instanceof TreeNode)
+                        ((TreeNode<K,V>)e).split(this, newTab, j, oldCap);
+                    else { // preserve order
+                        Node<K,V> loHead = null, loTail = null;
+                        Node<K,V> hiHead = null, hiTail = null;
+                        Node<K,V> next;
+                        do {
+                            next = e.next;
+                            if ((e.hash & oldCap) == 0) {
+                                if (loTail == null)
+                                    loHead = e;
+                                else
+                                    loTail.next = e;
+                                loTail = e;
+                            }
+                            else {
+                                if (hiTail == null)
+                                    hiHead = e;
+                                else
+                                    hiTail.next = e;
+                                hiTail = e;
+                            }
+                        } while ((e = next) != null);
+                        if (loTail != null) {
+                            loTail.next = null;
+                            newTab[j] = loHead;
+                        }
+                        if (hiTail != null) {
+                            hiTail.next = null;
+                            newTab[j + oldCap] = hiHead;
+                        }
+                    }
+                }
+            }
+        }
+        return newTab;
+    }
+```
+
+
+
+HashMap并发问题：
+
+1.7：扩容成环
+
+1.8：不再成环（因为是尾插法），但是有数据丢失情况
+
+**—————————————————————————————————————**
 
 ```java
 final Node<K,V> removeNode(int hash, Object key, Object value,
